boinc (6.1.0-1) experimental; urgency=low

  [ Frank S. Thomas ]

  +++ Changes unsuitable for the trunk branch:

  * Updates for the new Python policy:
    - Added python-support (>= 0.4.2) to Build-Depends.
    - Replaced dh_python with dh_pysupport in debian/rules.
  * debian/control:
    - Added "tcsh | c-shell" to boinc-server's Depends field since
      tools/db_query and tools/watch_tcp use /bin/csh as interpreter.
    - Removed all php4 packages from boinc-server's Depends because php4
      will not be supported during lenny's life cycle.
  * debian/boinc-server.README.Debian: Added README.Debian which is at the
    moment only a pointer to http://wiki.debian.org/BOINC/Server.
  * debian/boinc-server.install:
    - Added: db/init_db, sched/db_dump_spec.xml, test/uc_result,
      test/uc_wu_nodelete, tools/cleanlogs.sh, tools/create_work_example,
      tools/makelog.sh, tools/project.xml, tools/run_in_ops and tools/updater.
      Some of them were required by the tools/make_project script.
    - Removed: tools/add (long deprecated upstream).
  * debian/rules:
    - Don't fix PHP shebang and execute permissions of files in html/ops/
      since these were fixed upstream.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 30 May 2007 11:08:14 +0200

boinc (5.10.8-3) unstable; urgency=low

  * debian/control:
    - Moved Homepage pseudo field in the long descriptions to the source stanza
      because this is now a propper debian/control field supported by dpkg.
    - Removed XS- prefix from Vcs fields since they are now officially
      supported by dpkg.
  * debian/boinc-client.init: Print the scheduling status of boinc_client's
    children only if there are any present, otherwise schedtool would be
    called without arguments and would print its usage text.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 26 Sep 2007 13:36:13 +0200

boinc (5.10.8-2) unstable; urgency=low

  [ Frank S. Thomas ]