@@ -131,12 +131,6 @@ clean-patched:
 	[ ! -f Makefile ] || $(MAKE) distclean
 	
 	dh_clean \
-	  client/boinc.unmodified \
-	  clientgui/boincmgr.unmodified \
-	  lib/boinccmd \
-	  lib/boinccmd.unmodified
-	
-	dh_clean \
 	  boinc_client.1 \
 	  boinc_cmd.1 \
 	  boincmgr.1 \
