@@ -1,6 +1,13 @@
 boinc (6.1.0-1) experimental; urgency=low
 
   [ Frank S. Thomas ]
+  * New upstream release.
+    - Handles change in /proc/cpuinfo on powerpc introduced in Linux 2.6.23.
+      (closes: #437459)
+  * debian/rules:
+    - Don't clean lib/boinccmd and *.unmodified files by hand in the
+      clean-patched target, since they are now removed by upstream's
+      makefiles on "make clean".
 
   +++ Changes unsuitable for the trunk branch:
 
@@ -24,7 +31,7 @@ boinc (6.1.0-1) experimental; urgency=low
     - Don't fix PHP shebang and execute permissions of files in html/ops/
       since these were fixed upstream.
 
- -- Frank S. Thomas <frank@thomas-alfeld.de>  Wed, 30 May 2007 11:08:14 +0200
+ -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu, 04 Oct 2007 12:16:13 +0200
 
 boinc (5.10.8-3) unstable; urgency=low
 
